# puvs3

framework/: box.cpp  box.hpp  hitpoint.hpp  ray.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
source/: Aufgabe 7 und 8.txt  CMakeLists.txt  helloMPI.cpp  matmult_verteilt.cpp  tests.cpp
